_deploy/kustomize/overlays/dev/deployment.yaml
---
# FRONTEND DEPLOYMENT PATCH
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  template:
    spec:
      containers:
      - name: react-frontend
        image: react-frontend-img
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/scalesetpriority
                    operator: In
                    values:
                      - spot
