_deploy/kustomize/overlays/dev/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: dev-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: azdo-443
      number: 443
      protocol: HTTPS
    hosts:
    - '*-dev-uscz.cems.az-internal.nvisia.io'
