_deploy/kustomize/overlays/dev/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: react-frontend

spec:
  gateways:
  - istio-system/ingress-gateway
  hosts:
  - profile-builder-dev-uscz.internship-2023.az-internal.nvisia.io
